Modify blogs and adjust other details

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:              Zhiyu He
 email:              zhiyhe@ethz.ch
-description:        Keep your eyes on the stars, and your feet on the ground
+description:        Homepage of Zhiyu He
 author:             Zhiyu He
 baseurl:            ""
 url:                "https://zyhe.github.io"
