--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,9 @@ linkedin_username:
 # Add your google-analytics ID here to activate google analytics
 google_analytics:   G-C0YTJSLE5C # out your google-analytics code
 
+exclude:
+  - vendor
+
 # Build settings
 markdown:           kramdown
 paginate:           10
@@ -20,6 +23,7 @@ paginate_path:      "/posts/page:num/"
 plugins:
   - jekyll-feed
   - jekyll-paginate
+  - jekyll-reading-time
   - jekyll-sitemap ## Uncomment this line to silently generate a sitemaps.org compliant sitemap for your Jekyll site
 
 # # Navigation Configuration
