Adjust layouts & add Google Scholar

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ url:                "https://zyhe.github.io"
 twitter_username:   
 github_username: zyhe   
 linkedin_username: zhiyu-he-ba518a225
+google_scholar_username: 6F5yIIEAAAAJ
 
 # Add your google-analytics ID here to activate google analytics
 google_analytics:   G-C0YTJSLE5C # out your google-analytics code
